# test

./: .coverage  .coveragerc  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  coverage.xml  docker-compose.yml  event_service  patch_semantic_search.ps1  pyproject.toml  requirements.txt  router.py  test.db  uvicorn.out
.data/: professors.csv
.github/workflows/: ci.yml
.scripts/: db_inspect.py  export_csvs.py  query_codes.py
alembic/: env.py
alembic/versions/: 0001_add_professor_embedding.py  1151f0c2b1fc_merge_ai_summary_snapshot_and_add_.py  20251012_add_user_columns.py  20251013_add_friendships.py  20251030_add_user_jwt_valid_after.py  20251030_add_user_tier.py  20251114_add_professors_reviews_ai_summaries.py  20251116_add_ai_summary_history.py  20251118_ai_summary_snapshot.py  20251124_add_course_codes.py  3e588a47adb0_create_users_table.py
data/: user_service_sample.sql
event_service/: main.py  models.py  repository.py  schema.py  test_request_logging.py  test_usage_analytics.py
nicegui/: __init__.py
scripts/: clean_reddit_reviews.py  convert_rmp_to_tid.py  docker-entrypoint.sh  fill_rmp_urls.py  import_csv.sh  import_from_csv.sql  removed_reddit_reviews.csv  sync_db.sh
src/admin/: main.py  test_admin_helpers.py  test_admin_logging.py  test_log_admin_event.py  test_main_more.py  test_render_and_index.py  test_ui_views.py  test_user_list.py
src/event_service/: __init__.py  analytics.py  analytics_router.py  logging.py  models.py  repository.py  router.py  schemas.py  test_events.py  test_request_logging.py  test_usage_analytics.py  time_utils.py  usage_analytics.py
src/services/: ai_summarization_engine.py  recommendation_service.py  scraper_service.py  semantic_search.py  sfu_sync.py  summary_service.py  test_scraper_service.py
static/: app.js  auth.html  auth.js  index.html  professors.html  professors.js  search.html  search.js  styles.css
(+20 files in other folders)
